# terminal_tictactoe

./: CMakeLists.txt  board.cpp  board.h  tictactoe.cpp
include/: board.h
src/: tictactoe.cpp
